--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 sentiment_analysis_backend/.env
 /sentiment_analysis_frontend/.env
 /sentiment_analysis_frontend/node_modules
+sentiment_analysis_backend/app.log
